feat: get Comment with postId in queryLike-concerned post swagger
