# routes/post.js
@@ -26,8 +26,8 @@ postRouter.use(auth);
 postRouter.patch('/:postId', patchPost);
 
 postRouter.post('/post', createPost);
-postRouter.patch('/delete/:id', adminGuard, deletePost);
-postRouter.put('/put/:postId', updatePost);
+postRouter.patch('/delete/:postId', adminGuard, deletePost);
+postRouter.put('/:postId', updatePost);
 
 postRouter.patch('/like/:postId', auth, likePost);
 postRouter.patch('/unlike/:postId', auth, unlikePost);
